--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -1,12 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: web-service
+  name: myfamily-service
 spec:
+  type: LoadBalancer
   selector:
-    app: web-app
+    app: myfamily
   ports:
-    - protocol: TCP
-      port: 80
+    - port: 80
       targetPort: 80
-  type: NodePort
