--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -3,7 +3,7 @@ kind: Service
 metadata:
   name: myfamily-service
 spec:
-  type: LoadBalancer
+  type: NodePort
   selector:
     app: myfamily
   ports:
